Feature/1 ahmsa create book entity service controller (#4)
* Implement Book, Author, and Genre entities with DTOs, repositories, and a controller for book retrieval

* Refactor Book entity and DTO, update dependencies, and enhance BookService with new methods for retrieving all books

* Refactor BookDto to extend BookBaseDto, introduce AuthorBaseDto and GenreBaseDto, and update BookServiceTest to use BookBaseDto

* Fix issue with unit test

* Implement IDto interface in DTO classes, add save methods in services, and create controllers for Author and Genre entities

* Refactor controllers and services to implement a base controller and service interface for Author, Book, and Genre entities

* Add new endpoints for managing books, authors, and genres in Insomnia configuration

* Making /authors/findByName use name query param

* Adding log files to gitignore

* Rename 'nationality' to 'country' in Author and AuthorBaseDto classes for consistency

* Add CORS configuration to application.properties

* Rename 'nationality' to 'country' in AuthorDtoTest for consistency

* Refactor ID types from String to Long in entity and repository classes

* Refactor ID types from String to Long in AuthorDtoTest and BaseController

---------

Co-authored-by: Mouhanad Al-Ramli <mouhanad.al-ramli@gm.com>